<resources>
    <string name="app_name">AaronPokedex</string>
    <string name="pokemon_image_description">Pokemon Image</string>
    <string name="title_activity_info_profile">PokemonInformation</string>
    <string name="pokemon_content_description">Pokemon photo</string>
    <string name="action_settings">Settings</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="species">type</string>
    <string name="grid">Grid</string>
    <string name="Strong">Strong</string>
    <string name="Medium">Medium</string>
    <string name="linear">Linear</string>
    <string name="Weak">Weak</string>
    <string name="type">Type</string>
    <string name="search_hint">Search by Pokémon or type</string>
</resources>
