<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.aaron.myPokedex.PokemonInfo"
    tools:showIn="@layout/activity_pokemon_info">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardBackgroundColor="#FFFFFFFF"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="2dp"
        card_view:cardPreventCornerOverlap="true"
        card_view:cardUseCompatPadding="true"
        card_view:contentPadding="16dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/pokemon_info_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#2C3E50"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pokemon_info_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:textColor="#992C3E50"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/pokemon_info_name"
                app:layout_constraintLeft_toRightOf="@+id/pokemon_info_name"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/attack_label"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/attack"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/pokemon_info_name"
                android:fontFamily="sans-serif"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/pokemon_info_attack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:textColor="#2C3E50"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/attack_label"
                app:layout_constraintLeft_toRightOf="@+id/attack_label" />

            <TextView
                android:id="@+id/defense_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/defense"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/attack_label" />

            <TextView
                android:id="@+id/pokemon_info_defense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textColor="#2C3E50"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/defense_label"
                app:layout_constraintLeft_toRightOf="@+id/defense_label"
                app:layout_constraintTop_toTopOf="@+id/defense_label" />

            <TextView
                android:id="@+id/type_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/type"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/defense_label" />

            <TextView
                android:id="@+id/pokemon_info_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textColor="#2C3E50"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/type_label"
                app:layout_constraintLeft_toRightOf="@+id/type_label"
                app:layout_constraintTop_toTopOf="@+id/type_label" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.v4.widget.NestedScrollView>
